<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultBackgroundColor"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/greeting"
            android:textSize="@dimen/greeting_text_size" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_small"
            app:srcCompat="@drawable/ic_weather" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:hint="@string/how_was_your" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dayModeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/force_day_mode" />

            <Button
                android:id="@+id/darkModeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/force_night_mode" />

            <Button
                android:id="@+id/followPhoneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/follow_phone_style" />

            <Button
                android:id="@+id/followEnergySaveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/follow_save_mode" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <Button
                android:id="@+id/checkModeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/check_current_mode" />

            <TextView
                android:id="@+id/currentStateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:freezesText="true"
                android:padding="@dimen/margin_small"
                tools:text="@string/check_current_mode_result_other" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
